--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,12 @@
   "type": "commonjs",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "jwt-decode": "^4.0.0",
+    "mariadb": "^3.4.5"
   }
 }
