--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mariadb": "^3.4.5"
+    "mariadb": "^3.4.5",
+    "qrcode": "^1.5.4"
   }
 }
